java/java-tests/testData/codeInsight/daemonCodeAnalyzer/annotations/missingAttribute.java
@interface Ann {
    int i ();
}

@<error descr="'i' missing but required">Ann</error>() class D {
}